2005-10-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.common: AM_CPPFLAGS fixed to support building in a
	separate directory (required by rpm-build) 

2005-10-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/*.doc: documentation files updated in order to release
	version 3.9.0

2005-10-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: fixed a bug with ATLAS/BLAS library detection

	* doc/local/installation.doc: description updated to reflect
	recent changes in configuration process

	* itpp/*/*.{h,cpp}: cosmetic changes in copyright notes

2005-10-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: fixed a problem with linking when using gcc-4.0.x
	with its gfortran compiler (tested on SuSE 10.0)

	* configure.ac: fixed a bug with proper detection of FFTW and
	LAPACK libraries when neither ATLAS nor CBLAS is installed

2005-10-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/stat.h: added `within_tolerance' function for double
	and complex<double> arguments and fixed minor documentation errors

2005-09-26  Johan Bergman  <emwjohb@users.sourceforge.net>

	* Fixed bug [1302350]. Corrected behavior of operator<< in
	itpp/itconfig.h when the imaginary part equals "minus zero".

2005-09-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* test/Makefile.am: fixed testing routine execution parameters -
	there is no `-q' option of diff on Solaris 5.9

2005-09-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/turbo_test.cpp: added `using namespace std' statement
	* itpp/comm/turbo.*, itpp/comm/rec_syst_conv_code.*: fixed minor
	bug (string -> std::string)

	* itpp/*/*.{h,cpp}: file descriptions and copyright notes
	updated

2005-09-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* TODO: updated to reflect recent changes
	* configure.ac, Makefile.common: now $FLIBS are not added to
	default $LIBS, but set as $AM_LDFLAGS
